# overhang

./: .gitignore  CREDITS.md  Makefile  NOTICE  PROTOCOL.md  README.md  ROADMAP.md  WORKLOG.md
app/: Cargo.toml
app/src/: api.rs  lib.rs  main.rs
app/src/egui_legacy/: chat.rs  library.rs  mod.rs  stats.rs
app/src/views/: chat.rs  library.rs  mod.rs  stats.rs  system.rs  theme.rs
app/tests/: daemon.rs
daemon/: Cargo.toml
daemon/src/: chat.rs  config.rs  engine.rs  main.rs  models.rs  server.rs  system.rs
daemon/tests/: mock_engine.py  overhangd.mock.toml
daemon/tests/fixtures/: tokenizer.json
daemon/tests/fixtures/models/mock/: config.json  model.safetensors
engines/: bonsai_mlx.py  gemma.c  olmoe.c  qwen.c
metal/: om_metal.h  om_metal.mm
oracle/: ref_gemma.json  ref_qwen.json
oracle/gemma_tiny/: config.json  generation_config.json  model.safetensors
oracle/qwen_tiny/: config.json  model.safetensors
run/: agent_harness.py  olmoe_run.py  qwen_run.py
tools/: convert_gemma.py  convert_qwen.py  make_gemma_oracle.py  make_qwen_oracle.py
