[package]
name = "overhangd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokenizers = "0.21"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
